refactor(por): always use porDfs regardless of invariant
StaticPorExplorer now always uses porDfs regardless of whether an
invariant is provided, enabling state space reduction even when
checking invariants. The IndependenceRelation now treats read-read
as independent (standard POR), allowing Static POR to reduce states
for programs like lost-update.

Also updated DporExplorer with sleep set filtering to re-evaluate
sleep set entries when the current step changes, though DPOR still
has a known limitation for lost-update where it misses the
violation trace due to sleep set limitations.

Co-Authored-By: Claude <noreply@anthropic.com>